# investbuddy

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: main.ts  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/data/: watchlist.ts
src/services/: cache.ts  marketData.ts  scoring.ts  storage.ts
