[package]
name = "investbuddy"
version = "0.2.0"
description = "InvestBuddy desktop app"
authors = ["InvestBuddy"]
edition = "2021"

[lib]
name = "investbuddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
